# data-tank

./: README.md  pyproject.toml
data/csv/image_sampling/: Lenna.csv  YOASOBI.csv
data/csv/mathematical_functions/: Astroid.csv  Cardioid.csv  Circle.csv  Cosine.csv  Cubic_Function.csv  Cubic_Root_Function.csv  Cycloid.csv  Exponential_X_Function.csv  Involute_Curve.csv  Linear_Function.csv  Lissajous_Curve_1.csv  Lissajous_Curve_2.csv  Lissajous_Curve_3.csv  Logarithm_Function.csv  Logarithmic_Spiral.csv  Quadratic_Function.csv  Sine.csv  Square_Root_Function.csv  Tangent.csv  Two_to_the_xth_Power_Function.csv
data/csv/opendata/mhlw/: covid_19.csv
data/csv/opendata/tokyo_metropolitan_government/cultural_facilities_project/: output.csv
data/csv/opendata/tokyo_metropolitan_government/designation_historic_site/: output.csv
data/csv/opendata/tokyo_metropolitan_government/public_facilities/: output.csv
src/image_sampling/: README.md  __main__.py  main.py
src/mathematical_functions/: README.md  __main__.py  const.py  create.py
src/opendata/: README.md
src/opendata/mhlw/: __main__.py  const.py  covid_19.py
src/opendata/tokyo_metropolitan_government/: __main__.py  const.py  cultural_facilities_project.py  designation_historic_site.py  life_and_statistics.py  public_facilities.py
src/utils/: csv_util.py
tests/image_sampling/: test_main.py
tests/mathematical_functions/: test_create.py
tests/opendata/mhlw/: test_covid_19.py
tests/opendata/tokyo_metropolitan_government/: test_cultural_facilities_project.py  test_designation_historic_site.py  test_life_and_statistics.py  test_public_facilities.py
tests/utils/: test_csv_util.py
