[project]
name = "data-tank"
version = "0.0.2"
description = "Data Tank"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "D400",  # missing trailing period
    "D415",  # missing terminal punctuation
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]
logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.uv]
package = true
