[project]
name = "data-tank"
version = "0.0.2"
description = "Data Tank"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "matplotlib>=3.11.0",
    "opencv-python>=4.13.0.92",
    "polars>=1.41.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "D400",  # missing trailing period
    "D415",  # missing terminal punctuation
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]
logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.uv]
package = true
